quick code update

--- a/.gitignore
+++ b/.gitignore
@@ -16,12 +16,13 @@ bin/
 
 
 # a bash function for doing quick gitHub updates
-
 #  cupdate() {  git add . ; git commit -m "quick code update" ; git push origin main ; } 
 
 # note to self because I always forget this one when resetting the .gitignore
 #  git rm -r --cached . 
 
+# shows the files that have changed and need to be staged and commited
 #  git ls-files --others --exclude-standard
 
 # list by only name$  ls -1a
+
